--- a/src/styles/board-game.css
+++ b/src/styles/board-game.css
@@ -15,7 +15,32 @@
     flex-wrap: wrap;
     gap: 8px;
 
+
+    justify-content: center;
     overflow: hidden;
 
 
+
+}
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+.btn-discard, .btn-reset {
+    height: 40px;
+    margin-top: 16px;
+    padding: 8px 16px;
+    font-size: 16px;
+    border: 1px solid #333;
+    border-radius: 6px;
+    cursor: pointer;
+    background-color: #eee;
+}
+
+.btn-discard:hover,
+.btn-reset:hover {
+    background-color: #ddd;
 }
