--- a/src/styles/board-game.css
+++ b/src/styles/board-game.css
@@ -1,8 +1,8 @@
 .board-game {
-    height: 60vw;
-    width: 90vw;
-    max-width: 1000px;
-    max-height: 500px;
+    height: 100%;
+    width: 100%;
+    /* max-width: 1000px;
+    max-height: 500px; */
     margin: 0 auto;
     background: radial-gradient(circle at center, #2e7d32, #1b5e20);
     border: 8px solid #4e342e;
@@ -15,32 +15,20 @@
     flex-wrap: wrap;
     gap: 8px;
 
-
     justify-content: center;
     overflow: hidden;
 
 
-
 }
 
-.btn-container{
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-}
 
-.btn-discard, .btn-reset {
-    height: 40px;
-    margin-top: 16px;
-    padding: 8px 16px;
-    font-size: 16px;
-    border: 1px solid #333;
-    border-radius: 6px;
-    cursor: pointer;
-    background-color: #eee;
-}
 
-.btn-discard:hover,
-.btn-reset:hover {
-    background-color: #ddd;
+/* responsividade para celular */
+@media (max-width: 600px) {
+    .board-game {
+        height: 90vh;
+        width: 85vw;
+        max-height: 70vh;
+        max-width: 85vw;
+    }
 }
