--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,3 +1,100 @@
-body{
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
+body,
+html {
+    height: 100%;
+    font-family: sans-serif;
     background-color: rgb(123, 107, 107);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+#board {
+    display: flex;
+    height: 70vh;
+    width: 80vw;
+    flex-direction: row;
+    justify-content: center;
+    ;
+
+}
+
+.sidebar {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+.sidebar .item {
+    margin: 5px;
+    padding: 10px;
+}
+
+.main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#buttons {
+    height: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 1;
+
+}
+
+/* RESPONSIVO PARA CELULAR */
+@media (max-width: 768px) {
+    #board {
+        flex-direction: column;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .sidebar {
+        width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+
+
+    .main {
+        width: 100%;
+    }
+
+    #buttons {
+        flex-direction: column;
+        height: 100px;
+        width: 100%;
+        justify-content: space-around;
+    }
+
+    /* .buttons {
+        height: 150px;
+    } */
+
+    .sidebar .item {
+        flex: 1 1 30%;
+        text-align: center;
+    }
 }
