--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -4,7 +4,7 @@
     gap: 16px;
 }
 
-.btn-discard, .btn-reset {
+.btn-discard, .btn-reset,.btn-play {
     height: 40px;
     margin-top: 16px;
     padding: 8px 16px;
