--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -4,7 +4,6 @@
     padding: 0;
 }
 
-
 body,
 html {
     height: 100%;
@@ -18,31 +17,13 @@ html {
     padding: 0;
 }
 
-
-
 #board {
     display: flex;
     height: 70vh;
     width: 80vw;
     flex-direction: row;
     justify-content: center;
-    ;
-
-}
-
-.sidebar {
-    width: 20%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 10px;
-}
-
-.sidebar .item {
-    margin: 5px;
-    padding: 10px;
+    /* border: 8px solid red; */
 }
 
 .main {
@@ -60,6 +41,34 @@ html {
     align-items: center;
     z-index: 1;
 
+
+    background: radial-gradient(circle at center, #2e7d32, #1b5e20);
+    border: 8px solid #4e342e;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+
+}
+
+#sidebar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+score-board {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    height: 100%;
+    width: 100%;
+    min-width: 150px;
+    background: radial-gradient(circle at center, #2e7d32, #1b5e20);
+    border: 8px solid #4e342e;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
 }
 
 /* RESPONSIVO PARA CELULAR */
@@ -70,31 +79,12 @@ html {
         width: 100vw;
     }
 
-    .sidebar {
-        width: 100%;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
-
-
     .main {
         width: 100%;
     }
 
     #buttons {
-        flex-direction: column;
-        height: 100px;
-        width: 100%;
-        justify-content: space-around;
+        flex-wrap: wrap;
     }
 
-    /* .buttons {
-        height: 150px;
-    } */
-
-    .sidebar .item {
-        flex: 1 1 30%;
-        text-align: center;
-    }
 }
