--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -23,7 +23,8 @@ html {
     width: 80vw;
     flex-direction: row;
     justify-content: center;
-    /* border: 8px solid red; */
+    max-width: 1300px;
+
 }
 
 .main {
@@ -40,7 +41,6 @@ html {
     justify-content: space-evenly;
     align-items: center;
     z-index: 1;
-
 
     background: radial-gradient(circle at center, #2e7d32, #1b5e20);
     border: 8px solid #4e342e;
@@ -69,14 +69,15 @@ score-board {
     border: 8px solid #4e342e;
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 
 /* RESPONSIVO PARA CELULAR */
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
     #board {
         flex-direction: column;
-        height: 100vh;
-        width: 100vw;
+        height: 99vh;
+        width: 99vw;
     }
 
     .main {
